deactivate jdk preview features