@@ -45,9 +45,9 @@
                         <source>${java.version}</source>
                         <target>${java.version}</target>
                         <compilerArgs>
-                            <arg>--enable-preview</arg>
+<!--                            <arg>&#45;&#45;enable-preview</arg>-->
                         </compilerArgs>
-                        <jvmArgs>--enable-preview</jvmArgs>
+                        <!--                        <jvmArgs>&#45;&#45;enable-preview</jvmArgs>-->
                     </configuration>
                     <executions>
                         <execution>
